Fixing changes to alignment on footer pages

--- a/src/main/webapp/css/catalogue.css
+++ b/src/main/webapp/css/catalogue.css
@@ -1193,6 +1193,7 @@ ul.botnav li a {
 	#about_master_content_container_header {
 		width: 100%;
 		height: 60px;
+		text-align: left;
 	}
 
 	#about_master_content_container_left_col {
@@ -1206,6 +1207,8 @@ ul.botnav li a {
 		float: right;
 		width: 75%;
 		height: 90%;
+		text-align: left;
+		
 	}
 	
 		#about_master_content_container_right_col_inner {
@@ -1224,6 +1227,7 @@ ul.botnav li a {
 	#contact_master_content_container_header {
 		width: 100%;
 		height: 60px;
+		text-align: left;
 	}
 
 	#contact_master_content_container_left_col {
@@ -1237,6 +1241,7 @@ ul.botnav li a {
 		float: right;
 		width: 75%;
 		height: 90%;
+		text-align: left;
 	}
 	
 		#contact_master_content_container_right_col_inner {
@@ -1255,6 +1260,7 @@ ul.botnav li a {
 	#help_master_content_container_header {
 		width: 100%;
 		height: 60px;
+		text-align: left;
 	}
 
 	#help_master_content_container_left_col {
@@ -1268,6 +1274,7 @@ ul.botnav li a {
 		float: right;
 		width: 75%;
 		height: 90%;
+		text-align: left;
 	}
 	
 		#help_master_content_container_right_col_inner {
